--- a/cluster-create.yml
+++ b/cluster-create.yml
@@ -85,7 +85,7 @@
     # (3/4) Installing a pod network
 
     - name: Install pod network
-      command: /usr/bin/kubectl --kubeconfig /etc/kubernetes/admin.conf apply -f https://git.io/weave-kube-1.6
+      command: /usr/bin/kubectl --kubeconfig /etc/kubernetes/admin.conf apply -f {{ kube_flannel_file }}
       register: pod_network
       tags:
         - master
